--- a/createPod.yaml
+++ b/createPod.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - image: /var/lib/docker/examplenode
-      name: nodewebapp
+      name: haroon-app
       ports:
         - containerPort: 3000
   dnsPolicy: ClusterFirst
